fixed sticky footer.  Added page wrap to main and then changes to css file to make it stick, pun intended....

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -16,6 +16,22 @@ h2 {
 
 }
 
+.page-wrap {
+  min-height: 100%;
+	margin-bottom: -60px; 
+}
+
+.page-wrap:after {
+  content: "";
+  display: block;
+}
+.footer-hs, .page-wrap:after {
+	height: 60px; 
+}
+.footer-hs {
+  background: orange;
+}
+
 .navigation {
 	background-color: #fff;
 }
